[workspace]
resolver = "3"
members = [
    "crates/bbuilder",
    "crates/spec",
    "crates/runtime-docker-compose",
    "crates/catalog",
    "crates/template",
    "crates/babel",
    "crates/babel-api",
    "crates/fetcher",
    "crates/fetcher-api",
    "crates/cosmos-keys"
]

[workspace.dependencies]
spec = { path = "crates/spec" }
runtime-docker-compose = { path = "crates/runtime-docker-compose" }
runtime-trait = { path = "crates/runtime-trait" }
catalog = { path = "crates/catalog" }
template = { path = "crates/template" }
babel-api = { path = "crates/babel-api" }
fetcher-api = { path = "crates/fetcher-api" }
cosmos-keys = { path = "crates/cosmos-keys" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
rmp-serde = "1.0"
tonic = { version = "0.12", default-features = false }
tokio = { version = "1.40.0", features = ["full"] }
eyre = "0.6.12"
async-trait = "0.1.89"
serde_json = "1.0.145"
include_dir = "0.7"
tinytemplate = "1.2"
askama = "0.14.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false }
jsonrpsee = { version = "0.24", features = ["server", "ws-client", "http-client", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
