[package]
name = "catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
spec.workspace = true
eyre.workspace = true
tinytemplate.workspace = true
serde_json.workspace = true
tokio.workspace = true
askama.workspace = true
template.workspace = true
cosmos-keys.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
