[package]
name = "fetcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fetcher"
path = "bin/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
eyre = { workspace = true }
fetcher-api = { workspace = true }
tokio = { workspace = true }
jsonrpsee = { workspace = true }

url = "2.5"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
