[package]
name = "fetcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fetcher"
path = "bin/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
tokio = { workspace = true, features = ["io-util", "fs"] }
futures-util = "0.3"
pin-project-lite = "0.2"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
eyre = { workspace = true }
url = "2.5"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
